hard-gists/6d459a8c2ae945808d69/run.log
=== Docker Run Log for 6d459a8c2ae945808d69 ===
Started at: Mi 29. Okt 16:50:45 CET 2025

[2025-10-29 16:50:45] START: Running container for 6d459a8c2ae945808d69
[2025-10-29 16:50:45] SUCCESS: Container 27678009d851d1a4e41c2afc5982d74f6b403dd2fe3e5bee79417dd953181aae started for 6d459a8c2ae945808d69
=== Container logs for 6d459a8c2ae945808d69 ===
  File "/snippet.py", line 53
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 6d459a8c2ae945808d69 ===
[2025-10-29 16:50:47] INFO: Container 27678009d851d1a4e41c2afc5982d74f6b403dd2fe3e5bee79417dd953181aae has stopped
